# MIU

./: .dockerignore  .env.example  .gitignore  apache2.conf.example  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  jest.config.ts  jest.setup.ts  nodemon.json  package-lock.json  package.json  prometheus.test.yml  start-miu.sh  stop-miu.sh  tsconfig.backend.json  tsconfig.json  video_details.json
.serena/: project.yml
admin-db/: package.json  types.d.ts
backend/: .env.example  apache2.md  eslint.config.js  fix-imports.js  fix-imports.ts  package-lock.json  package.json  tsconfig.json
backups/: dev.db.backup_20250302190947  miu_db_2025-07-25.dump  miu_db_2025-07-26.dump  miu_db_2025-07-27.dump  miu_db_2025-07-28.dump  miu_db_2025-07-29.dump  miu_db_2025-07-30.dump  miu_db_2025-07-31.dump  miu_db_2025-08-01.dump  miu_db_2025-08-02.dump  miu_db_2025-08-03.dump  miu_db_2025-08-04.dump  miu_db_2025-08-05.dump  miu_db_2025-08-06.dump  miu_db_2025-08-07.dump  miu_db_2025-08-08.dump  miu_db_2025-08-09.dump  miu_db_2025-08-10.dump  miu_db_2025-08-11.dump  miu_db_2025-08-12.dump  miu_db_2025-08-13.dump  miu_db_2025-08-14.dump  miu_db_2025-08-15.dump  miu_db_2025-08-16.dump  miu_db_2025-08-17.dump  (+8 more)
tauri-client/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  build.sh  create-portable.py  create-portable.sh  install-desktop.sh  package.json  tauri.conf.json  watch-frontend.sh
tauri-client/frontend/: index.html  script.js  style.css
tauri-client/src/: audio.rs  config.rs  hyprland.rs  main.rs  mpris.rs  server.rs  state.rs  theme.rs  webview2.rs
(+237 files in other folders)
