[package]
name = "miu-player"
version = "1.0.0"
description = "MIU Music Player - Cross-platform desktop client"
authors = ["MIU Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
rodio = "0.17"
dirs = "5.0"
anyhow = "1.0"
bytes = "1.6"
futures-util = "0.3"
symphonia = { version = "0.5", features = ["aac", "isomp4"] }
notify = "6.1"

# System integration
[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.8"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "miu"
path = "src/main.rs"
